Added service for management of the appointments, for the moment being able to add an appointment

--- a/registerpatientservice/src/main/resources/application.properties
+++ b/registerpatientservice/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 
 server.port=2222
 
-spring.application.name=register-clients
+spring.application.name=register-patients
 
 
 #Mail configuration
